--- a/style.css
+++ b/style.css
@@ -12,7 +12,26 @@ main {
     overflow: hidden;
 }
 
+.delius-swash-caps-regular {
+    font-family: "Delius Swash Caps", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+h1 {
+    font-family: "Delius Swash Caps", 'Times New Roman', Times, serif;
+    color:darkslategrey;
+}
+h2 {
+    font-family: "Delius Swash Caps", 'Times New Roman', Times, serif;
+    color: darkslategrey;
+}
+p {
+    font-family: 'Times New Roman', Times, serif;
+}
+
 a {
+    font-family: 'Times New Roman', Times, serif;
     color: rgb(0, 0, 0);
 }
 
