--- a/style.css
+++ b/style.css
@@ -36,16 +36,24 @@ a {
 }
 
 .navbar {
-    width: 100%;
     background-color:antiquewhite;
-    overflow: auto;
+    display: flex;
 }
 
 .navbar a {
-    padding-top: 1rem;
-    float: left;
-    width: 25%;
+    flex: 1;
+    align-items: center;
+    padding: 1rem;
+    border-radius: 1rem;
+    border: 1px solid antiquewhite;
+    background-color: aliceblue;
+    display: inline-block;
     text-align: center;
+    text-decoration: none;
+    margin-right: 10px;
+}
+.navbar a:hover {
+    background-color: azure;
 }
 
 html {
@@ -54,6 +62,7 @@ html {
 
 .grid {
     display: flex;
+    grid-column-gap: 20px;
 }
 
 .col {
