--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body{
 
 main {
     background-color: aliceblue;
-    border: 1px solid gray;
     margin: 1rem;
     padding: 3ch;
     overflow: hidden;
@@ -19,10 +18,20 @@ main {
   }
 
 h1 {
+    text-align: center;
     font-family: "Delius Swash Caps", 'Times New Roman', Times, serif;
     color:darkslategrey;
 }
 h2 {
+    text-align: center;
+    font-family: "Delius Swash Caps", 'Times New Roman', Times, serif;
+    color: darkslategrey;
+}
+.banner {
+    background-color:antiquewhite;
+    padding: 1rem;
+}
+h3 {
     font-family: "Delius Swash Caps", 'Times New Roman', Times, serif;
     color: darkslategrey;
 }
